# OpenPSD

./: .gitignore  API_USAGE.md  CMakeLists.txt  LICENSE  README.md  openpsdConfig.cmake.in
demo/: CMakeLists.txt  psd_viewer.c
include/openpsd/: psd.h  psd_error.h  psd_export.h  psd_stream.h  psd_types.h
src/: psd_alloc.c  psd_alloc.h  psd_composite.h  psd_context.c  psd_context.h  psd_descriptor.c  psd_descriptor.h  psd_endian.c  psd_endian.h  psd_header.h  psd_layer.h  psd_layer_channel.h  psd_layer_decode.c  psd_layer_decode.h  psd_parse.c  psd_render.c  psd_resources.h  psd_rle.c  psd_rle.h  psd_stream.c  psd_text_layer.c  psd_text_layer.h  psd_text_layer_parse.c  psd_text_layer_parse.h  psd_unicode.c  psd_unicode.h  psd_zip.c  psd_zip.h
tests/: CMakeLists.txt  openpsd_tests.c  openpsd_tests.h  test_background_layer.c  test_basic.c  test_color_modes.c  test_text_layers.c
tests/samples/: rockstar.psd  sample-2.psd  sample-5.psd  sign-mockup.psd  tianye.psd
tests/samples/text-layers/: text-layer.psd
